--- a/toptal-frontend/package.json
+++ b/toptal-frontend/package.json
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/dayjs": "^2.11.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.3",
+    "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.3",
     "@mui/styled-engine-sc": "^5.0.3",
+    "@rehooks/local-storage": "^2.4.3",
+    "axios": "^0.22.0",
+    "date-fns": "^2.25.0",
+    "local-storage": "^2.0.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.2",
+    "react-toastify": "^8.0.3"
   },
   "devDependencies": {
+    "@types/local-storage": "^2.0.0",
     "@types/react": "17.0.27",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
