--- a/toptal-backend/package.json
+++ b/toptal-backend/package.json
@@ -35,6 +35,7 @@
     "@nestjs/typeorm": "^8.0.2",
     "bcrypt": "^5.0.1",
     "dayjs": "^1.10.7",
+    "lodash": "^4.17.21",
     "nestjs-typeorm-paginate": "^3.1.2",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
@@ -53,6 +54,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.175",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
