--- a/toptal-frontend/package.json
+++ b/toptal-frontend/package.json
@@ -12,6 +12,7 @@
     "@date-io/dayjs": "^2.11.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.8.2",
     "@mui/icons-material": "^5.0.3",
     "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.3",
@@ -24,7 +25,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.2",
-    "react-toastify": "^8.0.3"
+    "react-toastify": "^8.0.3",
+    "yup": "^0.32.10"
   },
   "devDependencies": {
     "@types/local-storage": "^2.0.0",
