--- a/toptal-backend/package.json
+++ b/toptal-backend/package.json
@@ -34,6 +34,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "dayjs": "^1.10.7",
     "lodash": "^4.17.21",
     "nestjs-typeorm-paginate": "^3.1.2",
