--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:12
     environment:
-      POSTGRES_USER: toptal
+      POSTGRES_USER: dev
       POSTGRES_PASSWORD: development
     ports:
       - '5432:5432'
